fixed scrool to next button when it is overflow positive

--- a/assets/css/what-i-do.css
+++ b/assets/css/what-i-do.css
@@ -48,7 +48,6 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        overflow: hidden;
         width: 43%;
     }
     .what-i-do__article__aside__img--app{
